--- a/home.html
+++ b/home.html
@@ -17,10 +17,10 @@
     </header>
     <div class="nav">
         <ul>
-            <li>
+            <!-- <li>
                 <a id="navtext" class="navtext" href="menu.html">メニュー一覧</a>
-            </li>
-            <li class="">
+            </li> -->
+            <li class="nav2">
                 <a class="navimg" href=""><img src="images\はてなのアイコン.png" alt=""></a>
                 <a class="navtext" href="#">ご利用ガイド</a>
             </li>
@@ -28,7 +28,7 @@
                 <a class="navimg" href=""><img src="images\人物アイコン.png" alt=""></a>
                 <a class="navtext" href="#">ログイン・登録</a>
             </li>
-            <li class="">
+            <li class="nav4">
                 <a class="navimg" href=""><img src="images\ショッピングカートのアイコン8.png" alt=""></a>
                 <a class="navtext" href="#">買い物かご</a>
             </li>
