--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <header>
         <div class="main-rogo">
             <img class="rogo" src="images\pizza-1428931_1920.png" alt="">
-            <h1>PizzaFoot</h1>
+            <h1>PizzaFoo</h1>
         </div>
     </header>
     <div class="nav">
