--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pizafoot</title>
+    <title>PizzaFoot</title>
     <link rel="stylesheet" href="my.css">
 </head>
 
